istio/simple/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  selector:
    app: nodejs
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: NodePort
